--- a/index.html
+++ b/index.html
@@ -10,44 +10,64 @@
 		<h1>Oz Utills</h1>
 		
 		<div class="tools">
-		<div id="quadEquation">
-			<h2>Quadric Equation Solver <br> ax^2 + bx + c</h2>
+			<div id="quadEquation">
+				<h2>Quadric Equation Solver <br> ax^2 + bx + c</h2>
 			
-			a: <input type="text" id="a_eq" class="numericBox">
-			b: <input type="text" id="b_eq" class="numericBox">
-			c: <input type="text" id="c_eq" class="numericBox">
-			<input type="button" value="Solve" onclick="boxValidator.checkQuadBoxes();">
-			<span class="errorBoxes" id="quadErrorMessage"></span>
-			<br>
-			<span class="allResults" id="quadResults"></span>
-		</div>
+				<label for="a_quadeq">a:</label>
+				<input type="text" id="a_quadeq" class="numericBox">
+			
+				<label for="b_quadeq">b:</label>
+				<input type="text" id="b_quadeq" class="numericBox">
+			
+				<label for="c_quadeq">c:</label>
+				<input type="text" id="c_quadeq" class="numericBox">
+			
+				<input type="button" value="Solve" onclick="boxValidator.checkQuadBoxes();">
+				<span class="errorBoxes" id="quadErrorMessage"></span>
+				<br>
+				<span class="allResults" id="quadResults"></span>
+			</div>
 		
 		
-		<div id="probabilityCalc">
-			<h2>Binomial Distribution Calculator</h2>
+			<div id="probabilityCalc">
+				<h2>Binomial Distribution Calculator</h2>
 			
-			Base probability : <input type="text" id="prob" class="numericBox">
-			N trials: <input type="text" id="trials" class="numericBox">
-			K success: <input type="text" id="success" class="numericBox">
-			<input type="button" value="Calculate" onclick="boxValidator.checkBinomialBoxes();">
-			<span class="errorBoxes" id="bionErrorMessage"></span>
-			<br>
-			<span class="allResults" id="bionResult"></span>
-		</div>
+				<label for="prob">Base probability:</label>
+				<input type="text" id="prob" class="numericBox">
+			
+				<label for="trials">N trials:</label>
+				<input type="text" id="trials" class="numericBox">
+			
+				<label for="successes">K success:</label>
+				<input type="text" id="successes" class="numericBox">
+			
+				<input type="button" value="Calculate" onclick="boxValidator.checkBinomialBoxes();">
+				<span class="errorBoxes" id="bionErrorMessage"></span>
+				<br>
+				<span class="allResults" id="bionResult"></span>
+			</div>
 		
-		<div id="passGenerator">
-			<h2>Password Generator</h2>
+			<div id="passGenerator">
+				<h2>Password Generator</h2>
 			
-			Password Length: <input type="text" id="plen" class="numericBox">
-			<br>
-			<input type="checkbox" id="lcase" checked="checked"> Lowercase
-			<input type="checkbox" id="ucase" checked="checked"> Uppercase
-			<input type="checkbox" id="nums" checked="checked"> Numbers
-			<input type="button" value="Generate" onclick="boxValidator.checkPassGenBoxes();">
-			<span class="errorBoxes" id="passGenErrorMessage"></span>
-			<br>
-			<span class="allResults" id="passGenResults"></span>
-		</div>
+				<label for="plen">Password Length:</label>
+				<input type="text" id="plen" class="numericBox">
+				<br>
+			
+				<input type="checkbox" id="lcase" checked="checked">
+				<label for="lcase">Lowercase</label>
+			
+				<input type="checkbox" id="ucase" checked="checked">
+				<label for="ucase">Uppercase</label>
+			
+				<input type="checkbox" id="nums" checked="checked">
+				<label for="nums">Numbers</label>
+			
+				<input type="button" value="Generate" onclick="boxValidator.checkPassGenBoxes();">
+				<span class="errorBoxes" id="passGenErrorMessage"></span>
+				<br>
+				<span class="allResults" id="passGenResults"></span>
+			</div>
 		</div>
 		
 		<footer>
