added unit converter

--- a/index.html
+++ b/index.html
@@ -68,10 +68,21 @@
 				<br>
 				<span class="allResults" id="passGenResults"></span>
 			</div>
+			
+			<div id="unitConverter">
+				<h2>Unit Converter</h2>
+				
+				<input type="text" id="convText">
+				<input type="button" value="Convert" onclick="boxValidator.checkConvertBoxes();">
+				<span class="errorBoxes" id="convertErrorMessage"></span>
+				<br>
+				<span class="allResults" id="convertResults"></span>
+			
+			
+			</div>
 		</div>
-		
 		<footer>
-			<p>Copyrights &#xA9 Oz Elentok. All Rights Reserved.</p>
+			<p>Copyrights &copy Oz Elentok. All Rights Reserved.</p>
 		</footer>
 
 		
