added format example to unit converter

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 			
 			<div id="unitConverter">
 				<h2>Unit Converter</h2>
+				<p id="convFormat">eg. 15 km to m</p>
 				
 				<input type="text" id="convText">
 				<input type="button" value="Convert" onclick="boxValidator.checkConvertBoxes();">
