added countdown timer

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<title>Oz's Utilities</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="utillstyles.css">
-		<script type="text/javascript" src="utillscript.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<h1>Oz Utills</h1>
@@ -79,13 +78,13 @@
 				<br>
 				<span class="allResults" id="convertResults"></span>
 			
-			
 			</div>
+			
+			<h2><a href="./timer">Timer</a></h2>
 		</div>
 		<footer>
 			<p>Copyrights &copy Oz Elentok. All Rights Reserved.</p>
 		</footer>
-
-		
+		<script type="text/javascript" src="scripts/utillscript.js"></script>
 	</body>
 </html>
