--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			
 			</div>
 			
-			<h2><a href="./timer">Timer</a></h2>
+			<h2><a href="./timer?tc=0-10-0">Timer</a></h2>
 		</div>
 		<footer>
 			<p>Copyrights &copy Oz Elentok. All Rights Reserved.</p>
