--- a/timer/index.html
+++ b/timer/index.html
@@ -6,13 +6,15 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 	</head>
 	<body>
-		<h1>Timer</h1>
-		<div id="clock">
-			<span id="hourBox">00</span>
-			<span>:</span>
-			<span id="minBox">00</span>
-			<span>:</span>
-			<span id="secBox">00</span>
+		<div id="wrapper">
+			<h1 style="text-align:center">Timer</h1>
+			<div id="clock">
+				<span id="hourBox">00</span>
+				<span>:</span>
+				<span id="minBox">00</span>
+				<span>:</span>
+				<span id="secBox">00</span>
+			</div>
 		</div>
 		<footer>
 			<p>Copyrights &copy Oz Elentok. All Rights Reserved.</p>
