changed background and footer style

--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
 			<h2><a href="./timer?tc=0-10-0">Timer</a></h2>
 		</div>
 		<footer>
-			<p>Copyrights &copy Oz Elentok. All Rights Reserved.</p>
+			Copyrights &copy Oz Elentok. All Rights Reserved.
 		</footer>
+		
 		<script type="text/javascript" src="scripts/utillscript.js"></script>
 	</body>
 </html>
