--- a/timer/index.html
+++ b/timer/index.html
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 		<footer>
-			<p>Copyrights &copy Oz Elentok. All Rights Reserved.</p>
+			Copyrights &copy Oz Elentok. All Rights Reserved.
 		</footer>
 		<script type="text/javascript" src="../scripts/tscript.js"></script>
 	</body>
