changed footer to div

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		
 		<div id="wrapper">
 			<h1>Utills</h1>
 			<div class="utill" id="quadEquation">
@@ -81,9 +80,9 @@
 			
 			<h2><a href="./timer?tc=0-10-0">Timer</a></h2>
 		</div>
-		<footer>
+		<div id="footer">
 			Copyrights &copy Oz Elentok. All Rights Reserved.
-		</footer>
+		</div>
 		
 		<script type="text/javascript" src="scripts/utillscript.js"></script>
 	</body>
