--- a/timer/index.html
+++ b/timer/index.html
@@ -171,9 +171,9 @@
 			</div>
 			<input id="toggler" type="button" value="Start Countdown"onclick="UIManager.toggleCountdown();">
 		</div>
-		<footer>
+		<div id="footer">
 			Copyrights &copy Oz Elentok. All Rights Reserved.
-		</footer>
+		</div>
 		<script type="text/javascript" src="../scripts/tscript.js"></script>
 	</body>
 </html>
