added header and navigation bar

--- a/timer/index.html
+++ b/timer/index.html
@@ -6,8 +6,15 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 	</head>
 	<body>
+		<div id="header">
+			<h1>Oz Elentok's Site</h1>
+		</div>
+		<div id="nav">
+			<ul>
+				<li><a id="first" href="../">Utills</a></li><li><a href=".">Timer</a></li><li><a href="http://bitbucket.org/ozelentok">Repository</a></li>
+			</ul>
+		</div>
 		<div id="wrapper">
-			<h1 style="text-align:center">Timer</h1>
 			<div id="dispTime">
 				<span id="hourDisp"></span>
 				<span>:</span>
