--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
+		<div id="header">
+			<h1>Oz Elentok's Site</h1>
+		</div>
+		<div id="nav">
+			<ul>
+				<li><a id="first" href=".">Utills</a></li><li><a href="./timer/">Timer</a></li><li><a href="http://bitbucket.org/ozelentok">Repository</a></li>
+
+			</ul>
+		</div>
 		<div id="wrapper">
-			<h1>Utills</h1>
 			<div class="utill" id="quadEquation">
 				<h2>Quadric Equation Solver <br> ax^2 + bx + c</h2>
 			
@@ -77,8 +85,6 @@
 				<span class="error" id="convertErrorMessage"></span>
 				<span class="result" id="convertResults"></span>
 			</div>
-			
-			<h2><a href="./timer?tc=0-10-0">Timer</a></h2>
 		</div>
 		<div id="footer">
 			Copyrights &copy Oz Elentok. All Rights Reserved.
