--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
+		<div id="overlord">
 		<div id="header">
 			<h1>Oz Elentok's Site</h1>
 		</div>
@@ -89,7 +90,7 @@
 		<div id="footer">
 			Copyrights &copy Oz Elentok. All Rights Reserved.
 		</div>
-		
+	</div>
 		<script type="text/javascript" src="scripts/utillscript.js"></script>
 	</body>
 </html>
