--- a/timer/index.html
+++ b/timer/index.html
@@ -5,10 +5,10 @@
 		<meta charset="utf-8">
 		<meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 	</head>
-	<body>
+	<body onresize="UIManager.resizeTimerFont();">
 		<div id="header">
 			<h1>Oz Elentok's Site</h1>
 		</div>
