--- a/timer/index.html
+++ b/timer/index.html
@@ -8,7 +8,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 	</head>
-	<body onresize="UIManager.resizeTimerFont();">
+	<body>
 		<div id="header">
 			<h1>Oz Elentok's Site</h1>
 		</div>
