enabling cache manifest

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 		<div id="footer">
-			Copyrights &copy Oz Elentok. All Rights Reserved.
+			Copyrights &copy; Oz Elentok. All Rights Reserved.
 		</div>
 		<script type="text/javascript" src="scripts/utillscript.js"></script>
 	</body>
