--- a/timer/index.html
+++ b/timer/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="cache.manifest">
 	<head>
 		<title>Timer</title>
 		<meta charset="utf-8">
@@ -35,7 +35,7 @@
 			<input id="toggler" type="button" value="Start Countdown"onclick="UIManager.toggleCountdown();">
 		</div>
 		<div id="footer">
-			Copyrights &copy Oz Elentok. All Rights Reserved.
+			Copyrights &copy; Oz Elentok. All Rights Reserved.
 		</div>
 		<script type="text/javascript" src="../scripts/tscript.js"></script>
 	</body>
