changed countdown button style

--- a/timer/index.html
+++ b/timer/index.html
@@ -32,7 +32,7 @@
 					<span class="timeValue" id="secDisp">00</span>
 				</div>
 			</div>
-			<input id="toggler" type="button" value="Start Countdown"onclick="UIManager.toggleCountdown();">
+			<span id="toggler" class="togglerUp" onclick="UIManager.toggleCountdown();" onmousedown="UIManager.toggleButtonStyle(1);" onmouseup="UIManager.toggleButtonStyle(0);" >Start Countdown</span>
 		</div>
 		<div id="footer">
 			Copyrights &copy; Oz Elentok. All Rights Reserved.
