seperated timer from main site

--- a/timer/index.html
+++ b/timer/index.html
@@ -6,17 +6,9 @@
 		<meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<div id="header">
-			<h1>Oz Elentok's Site</h1>
-		</div>
-		<div id="nav">
-			<ul>
-				<li><a id="first" href="../">Utills</a></li><li><a href=".">Timer</a></li><li><a href="http://bitbucket.org/ozelentok">Repository</a></li>
-			</ul>
-		</div>
 		<div id="wrapper">
 			<div id="dispTime">
 				<div class="timeBox" onclick="UIManager.getHours();">
@@ -37,6 +29,6 @@
 		<div id="footer">
 			Copyrights &copy; Oz Elentok. All Rights Reserved.
 		</div>
-		<script type="text/javascript" src="../scripts/tscript.js"></script>
+		<script type="text/javascript" src="scripts/tscript.js"></script>
 	</body>
 </html>
