--- a/timer/index.html
+++ b/timer/index.html
@@ -24,7 +24,8 @@
 					<span class="timeValue" id="secDisp">00</span>
 				</div>
 			</div>
-			<span id="toggler" class="button buttonUp" onclick="UIManager.toggleCountdown();">Start Countdown</span>
+			<span id="instruction">click on the value to change it</span>
+			<a href="#" id="toggler" class="button buttonUp" onclick="UIManager.toggleCountdown();">Start Countdown</a>
 		</div>
 		<div id="footer">
 			Copyrights &copy; Oz Elentok. All Rights Reserved.
