integrated jquery in timer

--- a/mtools/index.html
+++ b/mtools/index.html
@@ -25,7 +25,7 @@
 				<label for="c_quadeq">c:</label>
 				<input type="text" id="c_quadeq" class="numericBox">
 			
-				<a href="#quadEquation" id="quadButton" class="button buttonUp">Solve</a>
+				<a href="#" id="quadButton" class="button buttonUp">Solve</a>
 				<br>
 				<span class="error" id="quadErrorMessage"></span>
 				<span class="result" id="quadResults"></span>
@@ -44,7 +44,7 @@
 				<label for="successes">K success:</label>
 				<input type="text" id="successes" class="numericBox">
 			
-				<a href="#probabilityCalc" id="chanceButton" class="button buttonUp">Calculate</a>
+				<a href="#" id="chanceButton" class="button buttonUp">Calculate</a>
 				<br>
 				<span class="error" id="bionErrorMessage"></span>
 				<span class="result" id="bionResult"></span>
@@ -66,7 +66,7 @@
 				<input type="checkbox" id="nums" checked="checked">
 				<label for="nums">Numbers</label>
 			
-				<a href="#passGenerator" id="passGenButton" class="button buttonUp">Generate</a>
+				<a href="#" id="passGenButton" class="button buttonUp">Generate</a>
 				<br>
 				<span class="error" id="passGenErrorMessage"></span>
 				<span class="result" id="passGenResults"></span>
@@ -77,7 +77,7 @@
 				<p id="convFormat">eg. 15 km to m</p>
 				
 				<input type="text" id="convText">
-				<a href="#unitConverter" id="convertButton" class="button buttonUp">Convert</a>
+				<a href="#" id="convertButton" class="button buttonUp">Convert</a>
 				<br>
 				<span class="error" id="convertErrorMessage"></span>
 				<span class="result" id="convertResults"></span>
