--- a/timer/index.html
+++ b/timer/index.html
@@ -7,6 +7,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="shortcut icon" href="css/favicon.ico">
 	</head>
 	<body>
 		<div id="wrapper">
