changed helping text

--- a/timer/index.html
+++ b/timer/index.html
@@ -25,7 +25,7 @@
 					<span class="timeValue" id="secDisp">00</span>
 				</div>
 			</div>
-			<span id="instruction">click on the value to change it</span>
+			<span id="instruction">click on the numbers to change them</span>
 			<a href="#" id="toggler" class="button buttonUp">Start Countdown</a>
 		</div>
 		<div id="footer">
