timer now shows elapsed time since it ended

--- a/timer/index.html
+++ b/timer/index.html
@@ -14,15 +14,15 @@
 			<div id="dispTime">
 				<div class="timeBox">
 					<span class="timeHeader">Hours</span>
-					<span class="timeValue" id="hourDisp">00</span>
+					<span class="timeValueBig" id="hourDisp">00</span>
 				</div>
 				<div class="timeBox">
 					<span class="timeHeader">Minutes</span>
-					<span class="timeValue" id="minDisp">00</span>
+					<span class="timeValueBig" id="minDisp">00</span>
 				</div>
 				<div class="timeBox lastBox">
 					<span class="timeHeader">Seconds</span>
-					<span class="timeValue" id="secDisp">00</span>
+					<span class="timeValueBig" id="secDisp">00</span>
 				</div>
 			</div>
 			<span id="instruction">click on the numbers to change them</span>
